<resources>
    <string name="app_name">HackYeahLotto</string>
    <string name="state_activity">Current Status</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="bonus_reward">Bonus Reward</string>
    <string name="add_link_icon_downloaded">https://visualpharm.com/free-icons/running-595b40b65ba036ed117d3bb3</string>
    <string name="get_bonus_reward">Get Bonus Reward</string>
    <string name="task_date">Buy lottery ticket</string>
    <string name="point_state">Actual points: 25</string>
    <string name="daily_bonus_name">Bonus reward</string>
    <string name="next_draw_const_text">Next drawing</string>
    <string name="see_results">See last results</string>
    <string name="error_message">Error in fetch.</string>
    <string name="click_to_see_bonus_for_inviting">Click to see bonus for inviting</string>
    <string name="pointsText">Actual points: %d</string>
    <string name="share_app_reward_message">
        Choose a channel to share your favourite application with friends. Get REWARDED for each recommendation!
    </string>
    <string name="login">Login</string>
    <string name="game_win_status">Win</string>
    <string name="game_lost_status">Lost</string>
    <string name="game_waiting_status">Pending drawing</string>
    <string name="draw_purchase_date_desc">Purchase date:%s</string>
    <string name="draw_drawing_date_desc">Drawing date: %s</string>
    <string name="buy_lottery_ticket">Buy lottery ticket</string>
    <string name="you_won">YOU WON</string>
    <string name="definitely_check_tomorrow_your_new_reward">Definitely check tomorrow your new reward</string>
    <string name="bonus_lottery">BONUS LOTTERY</string>
    <string name="click_the_trasure_to_get_your_ndaily_bonus">Click the trasure to get your daily bonus</string>
    <string name="you_won_info">
        You probably have won (or lost) and this text should explain how it comes and what next steps you can take to make it
        happen again.
    </string>
    <string name="e_mail">E-MAIL</string>
    <string name="facebook">FACEBOOK</string>
    <string name="invite_by">INVITE BY :</string>
    <string name="message_sms">MESSAGE SMS</string>
</resources>
