<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/background">


    <Button
            android:text="@string/task_date"
            tools:text="Kup los"
            android:layout_width="0dp"
            android:layout_height="129dp"
            android:id="@+id/buy_ticket_btn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="129dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/buy_ticket_btn">
        <Button
                android:text="@string/point_state"
                tools:text="250 szans"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/point_state_btn"
                android:layout_weight="1"/>
        <Button
                android:text="@string/daily_bonus_name"
                tools:text="Daily bonus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/daily_task_btn"
                android:layout_weight="1"/>
    </LinearLayout>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.59"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="368dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:text="@string/next_draw_const_text"
                tools:text="Następne losowanie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/next_draw"
                android:layout_marginBottom="8dp" android:textAlignment="center"/>
        <TextView
                tools:text="Poniedziałek 26.11.2018"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/next_draw_tv"
                android:layout_marginBottom="8dp" android:textAlignment="center"/>
        <Button
                android:text="@string/see_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/see_results_btn"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>