<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InviteFriendsActivity"
        android:background="@drawable/gray_background">
    <TextView
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/invite_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <TextView
            android:textAlignment="viewStart"
            android:text="@string/share_app_reward_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:textSize="22sp" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button4"/>
    <Button
            android:text="@string/e_mail"
            android:textAlignment="textStart"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/light_blue_button"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:id="@+id/button2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawableRight="@drawable/ic_mail"
            android:paddingRight="25dp"/>
    <Button
            android:text="@string/facebook"
            android:textAlignment="textStart"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/light_blue_button"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:id="@+id/button3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:drawableRight="@drawable/ic_facebook"
            android:paddingRight="25dp"/>
    <Button
            android:text="@string/message_sms"
            android:textAlignment="textStart"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/light_blue_button"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:id="@+id/button4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:drawableRight="@drawable/ic_consulting_message"
            android:paddingRight="25dp"/>


</android.support.constraint.ConstraintLayout>