<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gray_background"
        tools:context=".AllFeaturesActivity">
    <Button
            android:text="@string/state_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/state_activity_btn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:text="@string/invite_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/friend_invite_btn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.524"/>
    <Button
            android:text="@string/bonus_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bonus_reward_btn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="172dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.516"/>
    <Button
            android:text="DRAW ACTIVITY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_draw_activity" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/state_activity_btn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>