<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="hackyeah.hackyeahlotto.StateViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".StateActivity"
            android:background="@drawable/gray_background">

        <include
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                layout="@layout/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <Button
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/buy_lottery_ticket"
                tools:text="@string/buy_lottery_ticket"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:id="@+id/buy_ticket_btn" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:background="@drawable/light_red_button"/>

        <Button
                android:background="@drawable/circle_button"
                android:text="@string/point_state"
                tools:text="@{@string/pointsText(viewModel.points)}"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/point_state_btn"
                android:layout_weight="1"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/buy_ticket_btn"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/daily_bonus_btn"
        />
        <Button
                android:background="@drawable/circle_button"
                android:text="@string/daily_bonus_name"
                tools:text="Daily bonus"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/daily_bonus_btn"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="@+id/point_state_btn"
                app:layout_constraintBottom_toBottomOf="@+id/point_state_btn" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/point_state_btn"
                android:layout_marginStart="8dp"/>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                    android:text="@string/next_draw_const_text"
                    tools:text="Next drawing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:id="@+id/next_draw_const_tv" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            />
            <TextView
                    android:text="Monday 26.11.2018"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:id="@+id/next_draw_tv"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/next_draw_const_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/see_results_btn"/>
            <Button
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/light_blue_button"
                    android:text="@string/see_results"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:id="@+id/see_results_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/next_draw_tv"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>